# contextualize

./: README.md  config.example.yaml  pyproject.toml  requirements.txt  setup.py
contextualize/: cli.py  commands.py  crawl.py  external.py  gitcache.py  gitrev.py  injection.py  mdlinks.py  payload.py  reference.py  repomap.py  shell.py  tokenize.py  utils.py
dev/: linear.qmd  workflow.qmd
docs/: plugins.md  usage.md
src/contextualize/: __init__.py  cli.py  concurrency.py  runtime.py  utils.py
src/contextualize/auth/: __init__.py  common.py
src/contextualize/cache/: __init__.py  arena.py  atproto.py  discord.py  local_media.py  media.py  payload.py  soundcloud.py  url.py  youtube.py
src/contextualize/core/: __init__.py  formats.py  hydrate.py  links.py  manifest.py  markitdown_adapter.py  payload.py  references.py  render.py  repomap.py  utils.py
src/contextualize/git/: __init__.py  cache.py  rev.py  target.py
src/contextualize/manifest/: __init__.py  build.py  hydrate.py  manifest.py  payload.py
src/contextualize/plugins/: __init__.py  api.py  auth.py  cli.py  loader.py  reference.py  resolve.py
src/contextualize/references/: __init__.py  arena.py  atproto.py  audio_transcription.py  discord.py  factory.py  file.py  helpers.py  media.py  shell.py  soundcloud.py  url.py  (+1 more)
tests/: test_git_target.py  test_hydrate_plugins.py  test_local_media_cache.py  test_manifest_build.py  test_media_transcription_cutover.py  test_plugin_auth_commands.py  test_plugin_cli_options.py  test_plugin_provider_ownership.py  test_plugins.py  test_url_reference_html_fallback.py
(+30 files in other folders)
