[project]
name = "contextualize"
version = "0.1.0"
description = "Model context preparation utility"
readme = "README.md"
authors = [
  { name = "jmpaz" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "pyyaml",
  "pathspec",
  "aider-chat>=0.86.1",
  "anthropic==0.42.0",
  "pyperclip>=1.8.2",
  "tiktoken>=0.6.0",
  "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/jmpaz/contextualize"

[project.scripts]
contextualize = "contextualize.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
